--- a/index.html
+++ b/index.html
@@ -4,13 +4,18 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/moment.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.5.43/moment-timezone-with-data-1970-2030.min.js"></script>
     <link rel="stylesheet" href="css/style.css" />
     <title>World Clock</title>
   </head>
   <body>
     <h1>World Clock</h1>
     <footer>
-      This project was coded by <a href="#" target="_blank">Sarah Johnson</a>
+      This project was coded by
+      <a href="https://github.com/sajoh002/WorldClock" target="_blank"
+        >Sarah Johnson</a
+      >
     </footer>
     <script src="javascript/index.js"></script>
   </body>
