--- a/index.html
+++ b/index.html
@@ -10,7 +10,28 @@
     <title>World Clock</title>
   </head>
   <body>
-    <h1>World Clock</h1>
+    <div class="container">
+      <h1>World Clock</h1>
+      <select>
+        <option value="">Select a city...</option>
+        <option value="">London</option>
+        <option value="">Paris</option>
+        <option value="">New York</option>
+        <option value="">Chicago</option>
+        <option value="">Seattle</option>
+        <option value="">Toyko</option>
+      </select>
+      <div class="city">
+        <h2>Los Angeles</h2>
+        <div class="date">August 15th, 2022</div>
+        <div class="time">1:45:15 AM</div>
+      </div>
+      <div class="city">
+        <h2>Maui</h2>
+        <div class="date">August 15th, 2022</div>
+        <div class="time">1:45:15 AM</div>
+      </div>
+    </div>
     <footer>
       This project was coded by
       <a href="https://github.com/sajoh002/WorldClock" target="_blank"
