styled the project with css

--- a/index.html
+++ b/index.html
@@ -22,14 +22,18 @@
         <option value="">Toyko</option>
       </select>
       <div class="city">
-        <h2>Los Angeles</h2>
-        <div class="date">August 15th, 2022</div>
-        <div class="time">1:45:15 AM</div>
+        <div>
+          <h2>Los Angeles</h2>
+          <div class="date">August 15th, 2022</div>
+        </div>
+        <div class="time">1:45:15 <small>AM</small></div>
       </div>
       <div class="city">
-        <h2>Maui</h2>
-        <div class="date">August 15th, 2022</div>
-        <div class="time">1:45:15 AM</div>
+        <div>
+          <h2>Maui</h2>
+          <div class="date">August 15th, 2022</div>
+        </div>
+        <div class="time">1:45:15 <small>AM</small></div>
       </div>
     </div>
     <footer>
