added functionality of select

--- a/index.html
+++ b/index.html
@@ -12,28 +12,30 @@
   <body>
     <div class="container">
       <h1>World Clock</h1>
-      <select>
+      <select id="city">
         <option value="">Select a city...</option>
-        <option value="">London</option>
-        <option value="">Paris</option>
-        <option value="">Los Angeles</option>
-        <option value="">Chicago</option>
-        <option value="">Seattle</option>
-        <option value="">Toyko</option>
+        <option value="Europe/London">London, UK</option>
+        <option value="Europe/Paris">Paris, FR</option>
+        <option value="America/Los_Angeles">Los Angeles, CA, USA</option>
+        <option value="America/Chicago">Chicago, IL, USA</option>
+        <option value="America/Vancouver">Vancouver, BC, CA</option>
+        <option value="Asia/Tokyo">Toyko, JP</option>
       </select>
-      <div class="city" id="nyc">
-        <div>
-          <h2>New York City, NY</h2>
-          <div class="date"></div>
+      <div id="cities">
+        <div class="city" id="nyc">
+          <div>
+            <h2>New York City, NY</h2>
+            <div class="date"></div>
+          </div>
+          <div class="time"></div>
         </div>
-        <div class="time"></div>
-      </div>
-      <div class="city" id="madison">
-        <div>
-          <h2>Madison, WI</h2>
-          <div class="date"></div>
+        <div class="city" id="madison">
+          <div>
+            <h2>Madison, WI</h2>
+            <div class="date"></div>
+          </div>
+          <div class="time"></div>
         </div>
-        <div class="time"></div>
       </div>
     </div>
     <footer>
