--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       <h1>World Clock</h1>
       <select id="city">
         <option value="">Select a city...</option>
+        <option value="current">Current Location</option>
         <option value="Europe/London">London, UK</option>
         <option value="Europe/Paris">Paris, FR</option>
         <option value="America/Los_Angeles">Los Angeles, CA, USA</option>
